@@ -310,12 +310,12 @@ const struct routine_t {
 
   { "mpn_mulmod_bnm1",   speed_mpn_mulmod_bnm1      },
 
+  { "mpn_invert",        speed_mpn_invert           },
   { "mpn_binvert",       speed_mpn_binvert          },
 
-  { "mpn_get_str",       speed_mpn_get_str,  FLAG_R_OPTIONAL },
-
-  { "mpn_set_str",         speed_mpn_set_str,     FLAG_R_OPTIONAL },
-  { "mpn_set_str_basecase",speed_mpn_bc_set_str,  FLAG_R_OPTIONAL },
+  { "mpn_get_str",          speed_mpn_get_str,     FLAG_R_OPTIONAL },
+  { "mpn_set_str",          speed_mpn_set_str,     FLAG_R_OPTIONAL },
+  { "mpn_set_str_basecase", speed_mpn_bc_set_str,  FLAG_R_OPTIONAL },
 
   { "mpn_sqrtrem",       speed_mpn_sqrtrem          },
   { "mpn_rootrem",       speed_mpn_rootrem, FLAG_R  },
